# CmakePractice

./: CMakeLists.txt  README.md
CMakeBuild/: CMakeCache.txt
CMakeBuild/Code/Calcu/: Makefile
CMakeBuild/Code/Print/: Makefile  cmake_install.cmake
CMakeBuild/Code/Test1/: Makefile
Code/Calcu/: CMakeLists.txt
Code/Calcu/Srcs/: mul.cpp
Code/Print/: CMakeLists.txt
Code/Test2/: CMakeLists.txt  print.cpp
Practice_CMake1/: CMakeLists.txt  main.cpp  result
Practice_CMake1/CMakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
Practice_CMake2/CMakeBuild/: cmake_install.cmake
Practice_CMake2/CMakeBuild/Code/Calcu/: cmake_install.cmake
Practice_CMake2/CMakeBuild/Code/Test1/: cmake_install.cmake
Practice_CMake2/Code/Calcu/Srcs/: add.cpp  div.cpp  sub.cpp
Practice_CMake2/Code/Print/Head/: print.h
Practice_CMake2/Code/Print/Srcs/: PrintString.cpp
Practice_CMake2/Code/Test1/: CMakeLists.txt  cal.cpp
Practice_CMake3/: CMakeLists.txt  main.cpp  result
Practice_CMake3/CMakeBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
